Fix z-index between photo frame & popup message on #4 Template

--- a/app/assets/stylesheets/fourthtemplate/fourthtemplate-gift.scss
+++ b/app/assets/stylesheets/fourthtemplate/fourthtemplate-gift.scss
@@ -189,7 +189,7 @@ span,p {font-size: 12px;}
   display: flex;
   flex-direction: column;
   justify-content: center;
-  z-index: 1;
+  z-index: 3;
   visibility: hidden;
   opacity: 0;
   transition: opacity 500ms;
